--- a/config/dsn.yaml
+++ b/config/dsn.yaml
@@ -8,9 +8,9 @@ includes:
 # train shot must be 15
 way_num: 5
 shot_num: 15
-query_num: 15
+query_num: 5
 test_way: 5
-test_shot: 1
+test_shot: 6
 test_query: 15
 
 epoch: 80
@@ -32,14 +32,9 @@ optimizer:
   other: ~
 
 lr_scheduler:
-  name: MultiStepLR
+  name: LambdaLR
   kwargs:
-    milestones:
-      - 12
-      - 30
-      - 45
-      - 57
-    gamma: 0.1
+    lr_lambda: "lambda e: 1.0 if e < 12 else (0.025 if e < 30 else 0.0032 if e < 45 else (0.0014 if e < 57 else (0.00052)))"
 
 classifier:
   name: DSN
