add dsn discriminative loss

--- a/config/dsn.yaml
+++ b/config/dsn.yaml
@@ -5,57 +5,67 @@ includes:
   - headers/model.yaml
   - headers/optimizer.yaml
 
-# train shot must be 15
+# for resnet12: train shot must be 15
 way_num: 5
-shot_num: 15
-query_num: 5
+shot_num: 1
+query_num: 15
 test_way: 5
-test_shot: 6
+test_shot: 1
 test_query: 15
 
-epoch: 80
-train_episode: 8000
-test_episode: 600
+epoch: 600
+train_episode: 100
+test_episode: 400
 
-episode_size: 8
+episode_size: 1
 
-device_ids: 0, 1
-n_gpu: 2
+device_ids: 0
+n_gpu: 1
+
+# optimizer:
+#   name: SGD
+#   kwargs:
+#     lr: 0.1
+#     momentum: 0.9
+#     weight_decay: 5e-4
+#     nesterov: True
+#   other: ~
+
+# lr_scheduler:
+#   name: LambdaLR
+#   kwargs:
+#     lr_lambda: "lambda e: 1.0 if e < 12 else (0.025 if e < 30 else 0.0032 if e < 45 else (0.0014 if e < 57 else (0.00052)))"
 
 optimizer:
-  name: SGD
+  name: Adam
   kwargs:
-    lr: 0.1
-    momentum: 0.9
-    weight_decay: 5e-4
-    nesterov: True
+    lr: 0.001
   other: ~
 
 lr_scheduler:
-  name: LambdaLR
+  name: StepLR
   kwargs:
-    lr_lambda: "lambda e: 1.0 if e < 12 else (0.025 if e < 30 else 0.0032 if e < 45 else (0.0014 if e < 57 else (0.00052)))"
+    step_size: 50
+    gamma: 0.5
 
 classifier:
   name: DSN
-  kwargs: ~
-
-# backbone:
-#   name: Conv64F
-#   kwargs:
-#     is_flatten: True
-#     is_feature: False
+  kwargs:
+    discriminative: True
 
 backbone:
-  name: resnet12
-  kwargs: ~
+  name: Conv64F
+  kwargs:
+    is_flatten: True
+    is_feature: False
 
-# need to modify: core/model/backbone/resnet_18.py:114 stride=1
+# backbone:
+#   name: resnet12
+#   kwargs: ~
+
 # backbone:
 #   name: resnet18
-#   kwargs:
-#     is_flatten: False
-#     avg_pool: False
+#   kwargs: ~
 
 # backbone:
 #   name: WRN
