--- a/config/headers/device.yaml
+++ b/config/headers/device.yaml
@@ -2,3 +2,5 @@ device_ids: 0 # determine GPU ids in bus order
 n_gpu: 1 # select the number of gpus to use
 seed: 2147483647 # random seed for numpy, torch and cuda
 deterministic: True # option for torch.backends.cudnn.benchmark  and torch.backends.cudnn.deterministic
+workers: 8 # number of workers for dataloader
+port: ~
