--- a/config/reproduce/RFS/RFS-simple-miniImageNet--ravi-resnet12-Table2.yaml
+++ b/config/reproduce/RFS/RFS-simple-miniImageNet--ravi-resnet12-Table2.yaml
@@ -6,20 +6,20 @@ backbone:
     avg_pool: true
     is_flatten: true
     keep_prob: 0.0
+    maxpool_last2: true
   name: resnet12
-batch_size: 128
+batch_size: 64
 classifier:
   kwargs:
     alpha: 0.5
-    classifier_path: ./results/RFSModel-miniImageNet--ravi-resnet18-5-1-Sep-23-2021-15-24-44/checkpoints/classifier_best.pth
-    emb_func_path: ./results/RFSModel-miniImageNet--ravi-resnet18-5-1-Sep-23-2021-15-24-44/checkpoints/emb_func_best.pth
     feat_dim: 640
     gamma: 0.5
     is_distill: false
     num_class: 64
   name: RFSModel
+data_name: miniImageNet
 data_root: /data/wzy/miniImageNet--ravi
-deterministic: true
+deterministic: false
 device_ids: 1
 episode_size: 1
 epoch: 100
@@ -30,21 +30,21 @@ includes:
 - headers/misc.yaml
 - headers/model.yaml
 - headers/optimizer.yaml
-- classifiers/RFS.yaml
-- backbones/resnet18.yaml
 log_interval: 100
 log_level: info
 log_name: null
 log_paramerter: false
 lr_scheduler:
   kwargs:
-    T_max: 100
-    eta_min: 0
-  name: CosineAnnealingLR
+    gamma: 0.1
+    milestones:
+    - 60
+    - 80
+  name: MultiStepLR
 n_gpu: 1
 optimizer:
   kwargs:
-    lr: 0.1
+    lr: 0.05
     momentum: 0.9
     weight_decay: 0.0005
   name: SGD
@@ -52,20 +52,22 @@ optimizer:
 parallel_part:
 - emb_func
 - classifier
-- distill_layers
+- distill_layer
+port: 45832
 pretrain_path: null
 query_num: 15
+rank: 0
 result_root: ./results
-resume: true
-resume_path: ./results/RFSModel-miniImageNet--ravi-resnet12-5-1-Nov-27-2021-13-57-42
+resume: false
 save_interval: 10
 save_part:
 - emb_func
-seed: 0
+- classifier
+seed: 2147483647
 shot_num: 1
 tag: null
-tb_scale: 8.333333333333334
-test_episode: 600
+tb_scale: 5.0
+test_episode: 1000
 test_epoch: 5
 test_query: 15
 test_shot: 1
@@ -73,3 +75,4 @@ test_way: 5
 train_episode: 5000
 use_memory: false
 way_num: 5
+workers: 8
