--- a/config/proto.yaml
+++ b/config/proto.yaml
@@ -10,27 +10,56 @@ way_num: 5
 shot_num: 1
 query_num: 15
 episode_size: 1
-train_episode: 2000
-test_episode: 600
+train_episode: 100
+test_episode: 100
 
-device_ids: 5
+device_ids: 7
 n_gpu: 1
-epoch: 200
+epoch: 100
 
+# num_workers: 0
 
-backbone:
-  name: Conv64F
+seed: ~
+deterministic: False
+
+loss:
+  name: SoftlabelCrossEntropyLoss
+  kwargs: ~
+
+aug_config:
+  train:
+    mixup:
+      mixup_alpha: 1.0
+      cutmix_alpha: 0.0
+      cutmix_minmax: ~
+      mode: episode
+      label_smoothing: 0.0
+
+# augment_method: RandAugment
+# image_size: 84
+
+lr_scheduler:
   kwargs:
-    is_flatten: True
-    is_feature: False
-    leaky_relu: False
-    negative_slope: 0.2
-    last_pool: True
+    gamma: 0.5
+    step_size: 20
+  name: StepLR
+optimizer:
+  kwargs:
+    lr: 0.001
+  name: Adam
 
 # backbone:
-#   name: resnet12
+#   name: Conv64F
 #   kwargs:
-#     keep_prob: 0.0
+#     is_flatten: True
+#     is_feature: False
+#     leaky_relu: False
+#     negative_slope: 0.2
+#     last_pool: True
+
+backbone:
+  name: resnet12
+  kwargs: ~
 
 # backbone:
 #   name: resnet18
@@ -58,6 +87,10 @@ backbone:
 #     T_max: 200
 #     eta_min: 0
 
+# # backbone:
+# #   name: CvT
+# #   kwargs: ~
+
 # backbone:
 #   name: swin_mini
 #   kwargs:
@@ -67,7 +100,7 @@ backbone:
 #     layers:
 #       - 2
 #       - 2
-#       - 2
+#       - 10
 #       - 2
 #     heads:
 #       - 1
