--- a/config/rfs.yaml
+++ b/config/rfs.yaml
@@ -4,27 +4,57 @@ includes:
   - headers/misc.yaml
   - headers/model.yaml
   - headers/optimizer.yaml
-  - classifiers/RFS.yaml
-  - backbones/resnet18.yaml
 
-device_ids: 0
+device_ids: 3
 way_num: 5
 shot_num: 1
 query_num: 15
 episode_size: 1
 train_episode: 100
-test_episode: 100
+test_episode: 600
+
+batch_size: 64
+epoch: 100
+
+loss:
+  name: SoftlabelCrossEntropyLoss
+  kwargs: ~
+
+aug_config:
+  train:
+    mixup:
+      mixup_alpha: 0.2
+      cutmix_alpha: 0.0
+      cutmix_minmax: ~
+      mode: batch
+      label_smoothing: 0.0
 
 save_part:
   - emb_func
   - classifier
 
+lr_scheduler:
+  kwargs:
+    gamma: 0.1
+    milestones:
+    - 60
+    - 80
+  name: MultiStepLR
+n_gpu: 1
+optimizer:
+  kwargs:
+    lr: 0.05
+    momentum: 0.9
+    weight_decay: 0.0005
+  name: SGD
+  other: null
+
 classifier:
   name: RFSModel
   kwargs:
-    feat_dim: 512
+    feat_dim: 640
     num_class: 64
-    gamma: 0.5
+    gamma: 1.0
     alpha: 0.5
     is_distill: False
     emb_func_path: ./results/RFSModel-miniImageNet--ravi-resnet18-5-1-Sep-23-2021-15-24-44/checkpoints/emb_func_best.pth
@@ -42,12 +72,9 @@ classifier:
 
 # Conv64: feat_dim: 1600
 
-# backbone:
-#   name: resnet12
-#   kwargs:
-#     keep_prob: 0.0
-#     avg_pool: True
-#     is_flatten: True
+backbone:
+  name: resnet12
+  kwargs: ~
 
 # resnet12: feat_dim: 640
 
