--- a/config/dn4.yaml
+++ b/config/dn4.yaml
@@ -7,43 +7,38 @@ includes:
   - classifiers/DN4.yaml
 
 way_num: 5
-shot_num: 5
+shot_num: 1
 query_num: 15
 episode_size: 1
 train_episode: 2000
 test_episode: 600
 
-device_ids: 3
+device_ids: 1
 n_gpu: 1
 epoch: 100
 
 # loss:
-#   name: LabelSmoothCrossEntropyLoss
-#   kwargs:
-#     num_classes: 5
-#     smoothing: 0.1
-
-loss:
-  name: SoftlabelCrossEntropyLoss
-  kwargs: ~
+#   name: SoftlabelCrossEntropyLoss
+#   kwargs: ~
 
 aug_config:
-  train:
+  train: ~
     # mixup:
     #   mixup_alpha: 0.0
     #   cutmix_alpha: 0.0
     #   cutmix_minmax: ~
     #   mode: episode
     #   label_smoothing: 0.1
-    label_smoothing:
-      smoothing: 0.1
-      num_classes: 64
+    # label_smoothing:
+    #   smoothing: 0.1
+    #   num_classes: 64
 
 lr_scheduler:
   kwargs:
     gamma: 0.5
-    step_size: 20
+    step_size: 50
   name: StepLR
+
 optimizer:
   kwargs:
     lr: 0.001
@@ -61,7 +56,7 @@ optimizer:
 backbone:
   name: resnet12
   kwargs:
-    maxpool_last2: False
+    avg_pool: False
     is_flatten: False
 
 # backbone:
