--- a/config/headers/data.yaml
+++ b/config/headers/data.yaml
@@ -5,3 +5,4 @@ augment: True
 augment_times: 1
 augment_times_query: 1
 workers: 8 # number of workers for dataloader in all threads
+dataloader_num: 1
