--- a/reproduce/DeepBDC/DeepBdcSTL-miniImageNet--ravi-resnet12-Gen0.yaml
+++ b/reproduce/DeepBDC/DeepBdcSTL-miniImageNet--ravi-resnet12-Gen0.yaml
@@ -14,9 +14,10 @@ classifier:
     dropout_rate: 0.5
     val_type: stl
     num_class: 64
-    penalty_C: 2        # 1-shot(0.1)  5-shot(2.0)
-    is_distill: false   # pretrain or distill
-    teacher_path: ~
+    penalty_C: 0.1        # 1-shot(0.1)  5-shot(2.0), as you test stl_model, you should modify this param in result/config.yaml
+    is_distill: false     # pretrain or distill
+    emb_func_path: ~
+    classifier_path: ~
 data_root: /home/wangyue/miniImageNet--ravi
 deterministic: true
 n_gpu: 1
@@ -66,15 +67,16 @@ save_part:
 seed: 1
 tag: null
 tb_scale: 3.3333333333333335
-val_per_epoch: 200
+# val_per_epoch: 1      # NOTE: save best model
+val_per_epoch: 200  # NOTE: just save last model
 test_episode: 600   # test/val n_episodes, number of episodes in meta val
 test_epoch: 5
 test_query: 15
 test_shot: 1
 test_way: 5
-train_episode: 600
+train_episode: 1000
 query_num: 15
 shot_num: 1
 use_memory: false
 way_num: 5
-workers: 12
+workers: 4
