--- a/reproduce/DeepBDC/DeepBdcSTL-miniImageNet--ravi-resnet12-Gen1.yaml
+++ b/reproduce/DeepBDC/DeepBdcSTL-miniImageNet--ravi-resnet12-Gen1.yaml
@@ -14,9 +14,10 @@ classifier:
     dropout_rate: 0.5
     val_type: stl
     num_class: 64
-    penalty_C: 2
-    is_distill: false   # pretrain or distill
-    teacher_path: ~
+    penalty_C: 0.1        # 1-shot(0.1)  5-shot(2.0), as you test stl_model, you should modify this param in result/config.yaml
+    is_distill: true      # pretrain or distill
+    emb_func_path: /home/wangyue/work/LibFewShot/results/DeepBDC_Pretrain-miniImageNet--ravi-resnet12Bdc-5-1-Mar-08-2023-15-15-42/checkpoints/emb_func_best.pth
+    classifier_path: /home/wangyue/work/LibFewShot/results/DeepBDC_Pretrain-miniImageNet--ravi-resnet12Bdc-5-1-Mar-08-2023-15-15-42/checkpoints/classifier_best.pth
 data_root: /home/wangyue/miniImageNet--ravi
 deterministic: true
 n_gpu: 1
@@ -66,8 +67,9 @@ save_part:
 seed: 1
 tag: null
 tb_scale: 3.3333333333333335
-val_per_epoch: 200
-test_episode: 100   # test/val n_episodes, number of episodes in meta val
+# val_per_epoch: 1      # NOTE: save best model
+val_per_epoch: 200  # NOTE: just save last model
+test_episode: 600   # test/val n_episodes, number of episodes in meta val
 test_epoch: 5
 test_query: 15
 test_shot: 1
@@ -77,4 +79,4 @@ query_num: 15
 shot_num: 1
 use_memory: false
 way_num: 5
-workers: 12
+workers: 4
