--- a/resultsDF20/ProtoNet-DF20-Conv64F-5-5-May-03-2023-20-32-25/config.yaml
+++ b/resultsDF20/ProtoNet-DF20-Conv64F-5-5-May-03-2023-20-32-25/config.yaml
@@ -14,7 +14,7 @@ batch_size: 128
 classifier:
   kwargs: null
   name: ProtoNet
-data_root: data/DF20
+data_root: E:/DeepLearning/data/DF20
 dataloader_num: 1
 deterministic: true
 device_ids: 0
