--- a/FinalExp/myConvM_18.yaml
+++ b/FinalExp/myConvM_18.yaml
@@ -4,27 +4,41 @@ includes:
   - headers/misc.yaml
   - headers/model.yaml
   - headers/optimizer.yaml
-  - classifiers/CAN.yaml
-  - backbones/Conv64F.yaml
+  - classifiers/ConvMNet.yaml
+  - backbones/resnet18.yaml
+  - headers/ssl.yaml
 
-episode_size: 4
+way_num: 5
+shot_num: 5
+query_num: 15
+episode_size: 1
+train_episode: 600
+test_episode: 300
+workers: 12
+epoch: 100
+augment_method: HorizontalFlip
+result_root: ./FinalResults/HorizontalFlip
+ssl_task: ~
+# ssl_lbda: 0.2
 
 classifier:
-  name: CAN
+  name: ConvMNet
   kwargs:
-    scale_cls: 7 # default
-    num_class: 64
-    nFeat: 64
-    HW: 10
+    n_local: 441
 
 backbone:
-  name: Conv64F
+  name: resnet18
   kwargs:
     is_flatten: False
+    avg_pool: False
     is_feature: False
-    leaky_relu: True
-    negative_slope: 0.2
-    last_pool: False
+    last_block_stride: 1
+
+optimizer:
+  name: 'Adam'
+  kwargs:
+    betas: [0.5, 0.9]
+    lr: 0.001 
 
 # backbone:
 #   name: resnet12
