--- a/myExp/myCan_18.yaml
+++ b/myExp/myCan_18.yaml
@@ -5,26 +5,32 @@ includes:
   - headers/model.yaml
   - headers/optimizer.yaml
   - classifiers/CAN.yaml
-  - backbones/Conv64F.yaml
+  - backbones/resnet18.yaml
 
-episode_size: 4
+way_num: 5
+shot_num: 5
+query_num: 15
+episode_size: 1
+train_episode: 600
+test_episode: 300
+workers: 12
+epoch: 100
 
 classifier:
   name: CAN
   kwargs:
     scale_cls: 7 # default
-    num_class: 64
-    nFeat: 64
-    HW: 10
+    num_classes: 1270
+    nFeat: 512
+    HW: 11
 
 backbone:
-  name: Conv64F
+  name: resnet18
   kwargs:
     is_flatten: False
+    avg_pool: False
     is_feature: False
-    leaky_relu: True
-    negative_slope: 0.2
-    last_pool: False
+    # last_block_stride: 2
 
 # backbone:
 #   name: resnet12
