--- a/reproduce/Proto/ProtoNet-miniImageNet--ravi-resnet12-5-1-Table2.yaml
+++ b/reproduce/Proto/ProtoNet-miniImageNet--ravi-resnet12-5-1-Table2.yaml
@@ -12,7 +12,7 @@ batch_size: 128
 classifier:
   kwargs: null
   name: ProtoNet
-data_root: /data/wzy/miniImageNet--ravi
+data_root: /tmp/miniImageNet--ravi
 deterministic: true
 device_ids: 0
 episode_size: 1
