--- a/reproduce/TPN/TPN-tieredImageNet--ravi-10-5-Table2.yaml
+++ b/reproduce/TPN/TPN-tieredImageNet--ravi-10-5-Table2.yaml
@@ -18,9 +18,9 @@ seed: 0
 n_gpu: 1
 device_ids: 0
 
-
 log_interval: 100
 log_level: info
 log_name: TPN-tieredImageNet-10-5-Table2
 
 result_root: ./results
+save_interval: 100
